[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/boat/boat1.png" type="Texture" id=1]
[ext_resource path="res://screens/main/Boat.gd" type="Script" id=2]
[ext_resource path="res://screens/main/Trash.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/boat/boat2.png" type="Texture" id=4]
[ext_resource path="res://assets/boat/boat4.png" type="Texture" id=5]
[ext_resource path="res://assets/boat/boat3.png" type="Texture" id=6]
[ext_resource path="res://screens/main/Rod.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sound/boat.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0.189148, 1.53018, 0, 0, 0, 0, 0.189148, 577.53 )
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 4.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Path2D/PathFollow2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.1, -6.17974, -15, -0.25, 0, 0.25, 0, -0.337896, -0.08, -2.15341, 0.09, 1.74964, 15, -0.25, 0, 0.25, 0, 0, -0.12, 2.55717, 0.0999999, -2.55717 ),
"times": PoolRealArray( 0, 1, 2, 3, 4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Path2D/PathFollow2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 577.53, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Path2D/PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "enable_capture"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("AnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "idle" ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=5]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Path2D/PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0.189148, 1.53018, 0, 0, 0, 0, 0, 1033 )
}

[sub_resource type="Animation" id=7]
resource_name = "idle"
length = 4.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Path2D/PathFollow2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.136558, -1.57978, 15, -0.308673, 0.669797, 0.348515, 0.422948, 0, -0.199135, 4.37131, 0.21054, -4.00114, -15, -0.25, 0, 0.200589, -0.722572, 0, -0.142223, -4.33604, 0.113824, 3.03172 ),
"times": PoolRealArray( 0, 1, 2, 3, 4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Path2D/PathFollow2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1033, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=8]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Path2D/PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "enable_capture"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("AnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "idle" ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=9]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Path2D/PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Curve2D" id=10]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0.189148, 1.53018, 0, 0, 0, 0, 0, 816 )
}

[sub_resource type="Animation" id=11]
resource_name = "idle"
length = 4.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Path2D/PathFollow2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.170698, -2.99645, -15, -0.274533, -0.722573, 0.263166, -0.722573, 0, -0.1906, -4.00114, 0.19347, 4.03641, 15, -0.35418, 0.088048, 0.294473, 0.088048, 0, -0.227572, 5.37601, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2, 3, 4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Path2D/PathFollow2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 816, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=12]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Path2D/PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "enable_capture"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("AnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "idle" ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=13]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Path2D/PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Curve2D" id=14]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0.189148, 1.53018, 0, 0, 0, 0, 0, 1076 )
}

[sub_resource type="Animation" id=15]
resource_name = "idle"
length = 4.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Path2D/PathFollow2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.179233, 5.04111, 15, -0.265998, 0.422946, 0.25, 0, 0, -0.199135, 4.70621, 0.184936, -4.33604, -15, -0.33711, 0.282121, 0.277403, -0.0527773, 0, -0.108083, -5.34073, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2, 3, 4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Path2D/PathFollow2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1076, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=16]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Path2D/PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "enable_capture"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("AnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "idle" ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=17]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Path2D/PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 383.464, 28.0555 )

[node name="Boat" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )
trash = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="TrashTimer" type="Timer" parent="."]
wait_time = 50.0
autostart = true

[node name="TrashInitTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="TrashSpawnPosition" type="Position2D" parent="."]
position = Vector2( 263.568, -145.947 )

[node name="Rod1" parent="." instance=ExtResource( 7 )]
position = Vector2( -317.189, -249.53 )

[node name="Path2D" type="Path2D" parent="Rod1"]
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="Rod1/Path2D"]
position = Vector2( 0.189148, 577.53 )
rotation = 1.5708
offset = 576.339

[node name="AnimationPlayer" type="AnimationPlayer" parent="Rod1"]
anims/idle = SubResource( 3 )
anims/rod_down = SubResource( 4 )
anims/rod_up = SubResource( 5 )

[node name="Rod2" parent="." instance=ExtResource( 7 )]
position = Vector2( -140, -242 )

[node name="Path2D" type="Path2D" parent="Rod2"]
curve = SubResource( 6 )

[node name="PathFollow2D" type="PathFollow2D" parent="Rod2/Path2D"]
position = Vector2( 3.25166e-07, 1033 )
rotation = 1.57099
offset = 1032.77

[node name="AnimationPlayer" type="AnimationPlayer" parent="Rod2"]
anims/idle = SubResource( 7 )
anims/rod_down = SubResource( 8 )
anims/rod_up = SubResource( 9 )

[node name="Rod3" parent="." instance=ExtResource( 7 )]
position = Vector2( 67, -220 )

[node name="Path2D" type="Path2D" parent="Rod3"]
curve = SubResource( 10 )

[node name="PathFollow2D" type="PathFollow2D" parent="Rod3/Path2D"]
position = Vector2( 0, 816 )
rotation = 1.57103
offset = 815.675

[node name="AnimationPlayer" type="AnimationPlayer" parent="Rod3"]
anims/idle = SubResource( 11 )
anims/rod_down = SubResource( 12 )
anims/rod_up = SubResource( 13 )

[node name="Rod4" parent="." instance=ExtResource( 7 )]
position = Vector2( 274, -189 )

[node name="Path2D" type="Path2D" parent="Rod4"]
curve = SubResource( 14 )

[node name="PathFollow2D" type="PathFollow2D" parent="Rod4/Path2D"]
position = Vector2( 0, 1076 )
rotation = 1.57097
offset = 1069.23

[node name="AnimationPlayer" type="AnimationPlayer" parent="Rod4"]
anims/idle = SubResource( 15 )
anims/rod_down = SubResource( 16 )
anims/rod_up = SubResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -73.3937, -79.266 )
rotation = 0.102891
shape = SubResource( 18 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = 21.0
[connection signal="timeout" from="TrashTimer" to="." method="_on_TrashTimer_timeout"]
[connection signal="timeout" from="TrashInitTimer" to="." method="_on_TrashTimer_timeout"]
[connection signal="captured" from="Rod1" to="." method="_on_Rod1_captured"]
[connection signal="game_over" from="Rod1" to="." method="_on_RodN_game_over"]
[connection signal="animation_finished" from="Rod1/AnimationPlayer" to="." method="_on_Rod1AnimationPlayer_animation_finished"]
[connection signal="captured" from="Rod2" to="." method="_on_Rod2_captured"]
[connection signal="game_over" from="Rod2" to="." method="_on_RodN_game_over"]
[connection signal="animation_finished" from="Rod2/AnimationPlayer" to="." method="_on_Rod2AnimationPlayer_animation_finished"]
[connection signal="captured" from="Rod3" to="." method="_on_Rod3_captured"]
[connection signal="game_over" from="Rod3" to="." method="_on_RodN_game_over"]
[connection signal="animation_finished" from="Rod3/AnimationPlayer" to="." method="_on_Rod3AnimationPlayer_animation_finished"]
[connection signal="captured" from="Rod4" to="." method="_on_Rod4_captured"]
[connection signal="game_over" from="Rod4" to="." method="_on_RodN_game_over"]
[connection signal="animation_finished" from="Rod4/AnimationPlayer" to="." method="_on_Rod4AnimationPlayer_animation_finished"]
